# Protein-Ligand-Affinity-Prediction-Using-LLM

./: .gitignore  MODEL_CARD.md  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  deploy-huggingface.yml  publish-model.yml
configs/: baseline.toml  colab.toml  kaggle_llm.toml
data/: sample_train.csv
docs/: LINKEDIN_POST.md  experiment_protocol.md  model_research.md
notebooks/: 01_export_llms_to_onnx.ipynb  02_build_embedding_dataset.ipynb  03_train_validate_export.ipynb  kaggle_training.ipynb
release/model/: README.md
scripts/: deploy_hf_space.py  eda.py
space/: Dockerfile  README.md  app.py  requirements.txt
src/affinity/: __init__.py  config.py  data.py  evaluate.py  export_mol_llama_onnx.py  export_onnx.py  export_prollama_onnx.py  export_sequence_encoders_onnx.py  extract_onnx_embeddings.py  features.py  inference.py  llm_embeddings.py  metrics.py  model.py  mol_llama_embeddings.py  onnx_embeddings.py  pipeline.py  prepare_dataset.py  train.py
tests/: test_data.py  test_features.py  test_metrics.py  test_mol_onnx_aggregation.py
