[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-compound-affinity"
version = "0.1.0"
description = "Colab-first protein-compound affinity training and three-model ONNX inference."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "torch>=2.2,<3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
export = [
  "accelerate>=0.30",
  "huggingface-hub>=0.30",
  "peft>=0.11",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "rdkit>=2024.3",
  "transformers>=4.43,<5",
]
runtime = [
  "onnxruntime>=1.18",
  "rdkit>=2024.3",
  "transformers>=4.43,<5",
]
gpu-runtime = [
  "onnxruntime-gpu>=1.18",
  "rdkit>=2024.3",
  "transformers>=4.43,<5",
]
space = [
  "gradio>=5,<7",
  "huggingface-hub>=0.24",
  "onnxruntime>=1.18",
  "plotly>=5.22",
  "py3Dmol>=2.2",
  "rdkit>=2024.3",
  "transformers>=4.43,<5",
]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
affinity-profile = "affinity.data:main"
affinity-train = "affinity.train:main"
affinity-evaluate = "affinity.evaluate:main"
affinity-export-onnx = "affinity.export_onnx:main"
affinity-export-mol-onnx = "affinity.export_mol_llama_onnx:main"
affinity-export-protein-onnx = "affinity.export_prollama_onnx:main"
affinity-extract-onnx = "affinity.extract_onnx_embeddings:main"
affinity-prepare-dataset = "affinity.prepare_dataset:main"
affinity-predict = "affinity.inference:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
